# longbow

./: .dockerignore  .gitignore  .golangci.yml  .markdownlint.json  .swp  Dockerfile  Dockerfile.nvidia  LICENSE  Makefile  README.md  RELEASES.md  RELEASE_NOTES_0.0.9.md  TEST_COVERAGE_PLAN.md  benchmark_results.json  coverage.out  coverage_report.txt  cpu.prof  debug_float16.py  debug_manifest.yaml  docker-compose.yml  final_benchmark_summary.json  fix_store.py  fix_store_v2.py  go.mod  go.sum  health_check.json  investigate_dtypes.py  lint_output.txt  matrix_complex128_128.json  matrix_complex128_384.json  matrix_complex64_128.json  matrix_complex64_384.json  matrix_float16_128.json  matrix_float16_384.json  matrix_float32_128.json  matrix_float32_384.json  matrix_float64_128.json  matrix_float64_384.json  matrix_int16_128.json  matrix_int16_384.json  (+51 more)
benchmark_results/: res_15000_128_run1_global.json  res_15000_128_run1_local.json  res_15000_128_run2_global.json  res_15000_128_run2_local.json  res_15000_128_run3_global.json  res_15000_128_run3_local.json  res_25000_128_run1_global.json  res_25000_128_run1_local.json  res_25000_128_run2_global.json  res_25000_128_run2_local.json  res_25000_128_run3_global.json  res_25000_128_run3_local.json  res_3000_128_run1_global.json  res_3000_128_run1_local.json  res_3000_128_run2_global.json  res_3000_128_run2_local.json  res_3000_128_run3_global.json  res_3000_128_run3_local.json  res_9000_128_run1_global.json  summary.json  (+5 more)
pythonsdk/: pyproject.toml  verify_sdk.py
pythonsdk/src/longbow/: client.py  exceptions.py  ingest.py
(+1243 files in other folders)
