[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longbow"
version = "0.1.0"
description = "Official Python SDK for Longbow Vector Database"
readme = "README.md"
authors = [
  { name = "Longbow Team", email = "sdk@longbow.dev" },
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=14.0.0",
    "grpcio>=1.50.0",
    "protobuf>=4.25.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "dask[dataframe]>=2023.12.0",
    "pandas>=2.0.0", 
    "distributed>=2023.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "isort",
  "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/longbow"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
